Enhacing the Home Page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Website created by Jacob Perry for the BYU-I WWD130 Class.">
+   <meta name="author" content="Jacob Perry">
    <link rel="stylesheet" href="styles/styles.css">
    <title>Jacob Perry | WDD 130</title>
 </head>
@@ -26,6 +28,17 @@
          learning Japanese on my own with slow but steady progress. はじめました、ぺりー•ジャコブです。プログラミングを勉強しています。
       </p>
    </main>
+   <aside>
+      <h2>Washington State, USA</h2>
+      <img
+         src="https://images.squarespace-cdn.com/content/v1/5602e09be4b053956b5c8d3a/1493665927050-FHCFI0UFOIW1RVDT3VH7/image-asset.jpeg?format=750w"
+         alt="Aerial shot of the puget sound facing Mount Rainer">
+      <p>Washington state sits in the northwest corner of the United states on the Pacific ocean. It is know for its
+         rainy weather, tech companies like Microsoft and Amazon, and also brands like Starbucks and Costco. Washington
+         is split in half by the cascade mountains leaving the east side of the state warmer and dryer then the west.
+         Washington has a lot of natural beauty and is a great place to spend time outdoors in the warm summer months
+         going on hikes or jumping into the frigid puget sound.</p>
+   </aside>
    <footer>
       <p>&copy; 2023 | <span> Jacob Perry </span> | <span>WA, USA</span></p>
    </footer>
