Completed w2 Raft planning site

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,13 +19,13 @@
       <h2> Overview </h2>
 
       <h3>Purpose</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nisi quam non voluptatibus, reprehenderit
-         cupiditate accusantium facere voluptatum beatae veniam suscipit aperiam nostrum provident rem exercitationem ab
-         sapiente inventore pariatur.</p>
+      <p>Connect those who are new to water rafting with experienced professional groups to give them a chance to learn
+         the basics. Focus on making it affordable for people to enjoy the sport. Highlight local groups to support
+         local economies.</p>
       <h3>Audience</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, impedit repellat dolorum quidem totam
-         debitis animi at architecto? Voluptates iste, numquam cumque deserunt alias nesciunt unde consequuntur
-         provident nobis voluptatum.</p>
+      <p>Those who are wanting to try white water rafting for the first time and need a group to go with. Those who are
+         solo and want to connect with others to go onto the rapids. Low to middle class adults who want to do something
+         fun on the weekend.</p>
 
 
       <h2>Branding</h2>
@@ -37,16 +37,18 @@
       <h2>Style Guide</h2>
 
       <h3>Color Palette</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique officia aliquid quas harum repudiandae
-         corrupti mollitia perspiciatis. Ipsum, eos a perferendis inventore vero fugit, possimus adipisci repudiandae
-         alias amet expedita?</p>
+      <ul>
+         <li>Primary: #232ed1</li>
+         <li>Secondary: #6564db</li>
+         <li>Accent 1: #89d2dc</li>
+         <li>Accent 2: #101d42</li>
+      </ul>
       <a href="https://coolors.co/0a122a-805d93-20a39e-9ce37d-ffba49" target="_blank">Coolors Pallete</a>
       <h3>Typography</h3>
       <h4>Headings Example Font</h4>
       <h4>Normal Text/Paragraph Example Font</h4>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit fugit voluptatum sint nam sequi
-         distinctio, mollitia harum perspiciatis repudiandae doloribus voluptates blanditiis id iste. Atque ut amet
-         ipsam soluta?</p>
+      <p>Headings: Kanit (sans-serif font)</p>
+      <p>Paragraph: Inter (sans-serif font)</p>
 
       <h3>Navigation</h3>
       <nav>
@@ -68,7 +70,7 @@
          alt="About Us Page Wireframe Design" width="700">
    </main>
    <footer>
-      <p>&copy 2023 Rafting Site Plan Jacob Perry WDD130</p>
+      <p>&copy; 2023 Rafting Site Plan Jacob Perry WDD130</p>
    </footer>
 </body>
 
