Course Home Enhancement

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
          <a href="#">Home</a>
          <a href="www/">White Water Rafter Website</a>
          <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+         <a href="https://www.linkedin.com/in/jacobrperry/">Linkedin Profile</a>
+         <a href="https://www.facebook.com/">Facebook</a>
       </nav>
    </header>
    <main>
@@ -26,9 +28,42 @@
          skills. I am self taught in web, game and application programming but want to improve and certify my knowledge
          to make job searching easier. I also like to study other things in my free time. I have been working on
          learning Japanese on my own with slow but steady progress. はじめました、ぺりー•ジャコブです。プログラミングを勉強しています。
+         <br>
+         Officia cillum ea sint do minim. Mollit proident cupidatat officia consectetur laboris excepteur enim. Fugiat
+         et nisi eu dolor occaecat sit est amet exercitation non do ad. Voluptate sunt nostrud sit nisi est duis anim.
+         Esse tempor proident magna anim commodo mollit fugiat ipsum. Dolor veniam commodo adipisicing anim deserunt
+         laboris ut ea. Enim velit consequat minim reprehenderit commodo aliqua cupidatat.
+         <br>
+         Ipsum aliqua aliqua labore culpa exercitation voluptate eu. Excepteur laboris ad anim quis tempor proident est
+         ipsum ea deserunt ullamco. Ipsum officia quis ullamco id non. Sint aliquip ex quis eiusmod culpa aliqua commodo
+         quis. Occaecat deserunt esse velit esse consectetur ullamco occaecat reprehenderit occaecat quis voluptate. Ea
+         ad minim deserunt voluptate incididunt proident laborum. Excepteur dolor reprehenderit aliquip deserunt nulla
+         dolore consequat laboris sunt culpa occaecat sunt dolor.
+
       </p>
+
+      <ul class="box">
+         <h3>Favorite Temples</h3>
+         <li>
+            <a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng"
+               target="_blank">
+               Portland Temple
+            </a>
+         </li>
+         <li>
+            <a href="https://www.churchofjesuschrist.org/temples/details/seattle-washington-temple?lang=eng"
+               target="_blank">
+               Seattle Temple
+            </a>
+         </li>
+         <li>
+            <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">
+               Logan Temple
+            </a>
+         </li>
+      </ul>
    </main>
-   <aside>
+   <aside class="box">
       <h2>Washington State, USA</h2>
       <img
          src="https://images.squarespace-cdn.com/content/v1/5602e09be4b053956b5c8d3a/1493665927050-FHCFI0UFOIW1RVDT3VH7/image-asset.jpeg?format=750w"
@@ -43,5 +78,7 @@
       <p>&copy; 2023 | <span> Jacob Perry </span> | <span>WA, USA</span></p>
    </footer>
 </body>
+
+<!-- May 3rd, 2023 -->
 
 </html>
