--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
+    <meta name="description" content="Mt. Rafting Co. about page">
+    <meta name="author" content="Jacob Perry">
     <title>Mt. Rafting Co. | About Us</title>
 </head>
 
