Adding flex and grid to homepage

--- a/index.html
+++ b/index.html
@@ -20,62 +20,74 @@
          <a href="https://www.facebook.com/">Facebook</a>
       </nav>
    </header>
-   <main>
-      <h1>Jacob Perry | WDD 130</h1>
-      <img src="images/profile.webp" alt="Jacob Perry Profile Image" width="200">
-      <p>
-         Greetings, I am Jacob Perry. I am from the beautiful pacific northwest and hoping to improve on my programming
-         skills. I am self taught in web, game and application programming but want to improve and certify my knowledge
-         to make job searching easier. I also like to study other things in my free time. I have been working on
-         learning Japanese on my own with slow but steady progress. はじめました、ぺりー•ジャコブです。プログラミングを勉強しています。
-         <br>
-         Officia cillum ea sint do minim. Mollit proident cupidatat officia consectetur laboris excepteur enim. Fugiat
-         et nisi eu dolor occaecat sit est amet exercitation non do ad. Voluptate sunt nostrud sit nisi est duis anim.
-         Esse tempor proident magna anim commodo mollit fugiat ipsum. Dolor veniam commodo adipisicing anim deserunt
-         laboris ut ea. Enim velit consequat minim reprehenderit commodo aliqua cupidatat.
-         <br>
-         Ipsum aliqua aliqua labore culpa exercitation voluptate eu. Excepteur laboris ad anim quis tempor proident est
-         ipsum ea deserunt ullamco. Ipsum officia quis ullamco id non. Sint aliquip ex quis eiusmod culpa aliqua commodo
-         quis. Occaecat deserunt esse velit esse consectetur ullamco occaecat reprehenderit occaecat quis voluptate. Ea
-         ad minim deserunt voluptate incididunt proident laborum. Excepteur dolor reprehenderit aliquip deserunt nulla
-         dolore consequat laboris sunt culpa occaecat sunt dolor.
+   <div class="grid">
+      <main>
+         <h1>Jacob Perry | WDD 130</h1>
+         <img src="images/profile.webp" alt="Jacob Perry Profile Image" width="200">
+         <p>
+            Greetings, I am Jacob Perry. I am from the beautiful pacific northwest and hoping to improve on my
+            programming
+            skills. I am self taught in web, game and application programming but want to improve and certify my
+            knowledge
+            to make job searching easier. I also like to study other things in my free time. I have been working on
+            learning Japanese on my own with slow but steady progress. はじめました、ぺりー•ジャコブです。プログラミングを勉強しています。
+         </p>
+         <p>
+            Officia cillum ea sint do minim. Mollit proident cupidatat officia consectetur laboris excepteur enim.
+            Fugiat
+            et nisi eu dolor occaecat sit est amet exercitation non do ad. Voluptate sunt nostrud sit nisi est duis
+            anim.
+            Esse tempor proident magna anim commodo mollit fugiat ipsum. Dolor veniam commodo adipisicing anim deserunt
+            laboris ut ea. Enim velit consequat minim reprehenderit commodo aliqua cupidatat.
+         </p>
+         <p>
+            Ipsum aliqua aliqua labore culpa exercitation voluptate eu. Excepteur laboris ad anim quis tempor proident
+            est
+            ipsum ea deserunt ullamco. Ipsum officia quis ullamco id non. Sint aliquip ex quis eiusmod culpa aliqua
+            commodo
+            quis. Occaecat deserunt esse velit esse consectetur ullamco occaecat reprehenderit occaecat quis voluptate.
+            Ea
+            ad minim deserunt voluptate incididunt proident laborum. Excepteur dolor reprehenderit aliquip deserunt
+            nulla
+            dolore consequat laboris sunt culpa occaecat sunt dolor.
+         </p>
 
-      </p>
-
-      <ul class="box">
-         <h3>Favorite Temples</h3>
-         <li>
-            <a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng"
-               target="_blank">
-               Portland Temple
-            </a>
-         </li>
-         <li>
-            <a href="https://www.churchofjesuschrist.org/temples/details/seattle-washington-temple?lang=eng"
-               target="_blank">
-               Seattle Temple
-            </a>
-         </li>
-         <li>
-            <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">
-               Logan Temple
-            </a>
-         </li>
-      </ul>
-   </main>
-   <aside class="box">
-      <h2>Washington State, USA</h2>
-      <img
-         src="https://images.squarespace-cdn.com/content/v1/5602e09be4b053956b5c8d3a/1493665927050-FHCFI0UFOIW1RVDT3VH7/image-asset.jpeg?format=750w"
-         alt="Aerial shot of the puget sound facing Mount Rainer">
-      <p>Washington state sits in the northwest corner of the United states on the Pacific ocean. It is know for its
-         rainy weather, tech companies like Microsoft and Amazon, and also brands like Starbucks and Costco. Washington
-         is split in half by the cascade mountains leaving the east side of the state warmer and dryer then the west.
-         Washington has a lot of natural beauty and is a great place to spend time outdoors in the warm summer months
-         going on hikes or jumping into the frigid puget sound.</p>
-   </aside>
+         <ul class="box">
+            <!-- <h3>Favorite Temples</h3> -->
+            <li>
+               <a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng"
+                  target="_blank">
+                  Portland Temple
+               </a>
+            </li>
+            <li>
+               <a href="https://www.churchofjesuschrist.org/temples/details/seattle-washington-temple?lang=eng"
+                  target="_blank">
+                  Seattle Temple
+               </a>
+            </li>
+            <li>
+               <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">
+                  Logan Temple
+               </a>
+            </li>
+         </ul>
+      </main>
+      <aside class="box">
+         <h2>Washington State, USA</h2>
+         <img
+            src="https://images.squarespace-cdn.com/content/v1/5602e09be4b053956b5c8d3a/1493665927050-FHCFI0UFOIW1RVDT3VH7/image-asset.jpeg?format=750w"
+            alt="Aerial shot of the puget sound facing Mount Rainer">
+         <p>Washington state sits in the northwest corner of the United states on the Pacific ocean. It is know for its
+            rainy weather, tech companies like Microsoft and Amazon, and also brands like Starbucks and Costco.
+            Washington
+            is split in half by the cascade mountains leaving the east side of the state warmer and dryer then the west.
+            Washington has a lot of natural beauty and is a great place to spend time outdoors in the warm summer months
+            going on hikes or jumping into the frigid puget sound.</p>
+      </aside>
+   </div>
    <footer>
-      <p>&copy; 2023 | <span> Jacob Perry </span> | <span>WA, USA</span></p>
+      <p>&copy; 2023 ✨ <span> Jacob Perry </span> ✨ <span>WA, USA</span></p>
    </footer>
 </body>
 
