Updated about section CSS

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,24 +32,39 @@
                     Nemo, amet ipsum!</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, magni laborum. Quibusdam assumenda
                 optio non, vel laboriosam deleniti cum aut autem blanditiis vitae alias. Numquam maiores itaque dolorum
                 reiciendis quia!
             </p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="./images/rafting22_600.jpg" alt="">
-            <img src="./images/rafting58_600.jpg" alt="">
-            <img src="./images/rafting43_600.jpg" alt="">
-            <img src="./images/rafting65_600.jpg" alt="">
-            <img src="./images/rafting20_600.jpg" alt="">
+            <figure>
+                <img src="./images/rafting22_600.jpg" alt="">
+                <figcaption>Getting ready for the rapids</figcaption>
+            </figure>
+            <figure>
+                <img src="./images/rafting58_600.jpg" alt="">
+                <figcaption>Blue Cobra Run</figcaption>
+            </figure>
+            <figure>
+                <img src="./images/rafting43_600.jpg" alt="">
+                <figcaption>The Giants Back</figcaption>
+            </figure>
+            <figure>
+                <img src="./images/rafting65_600.jpg" alt="">
+                <figcaption>Gate of Niflheim</figcaption>
+            </figure>
+            <figure>
+                <img src="./images/rafting20_600.jpg" alt="">
+                <figcaption>Half Day Adventure</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Mt. Rafting Co. | Jacob Perry</p>
+        <p>&copy;2023 Mt. Rafting Co. | Jacob Perry</p>
         <a href="https://www.facebook.com/"><img src="./images/facebook.svg" alt="Facebook link icon"></a>
         <a href="https://www.instagram.com/"><img src="./images/instagram.svg" alt="Instagram link icon"></a>
         <a href="https://www.youtube.com/"><img src="./images/youtube.svg" alt="Youtube link icon"></a>
