--- a/quiz.html
+++ b/quiz.html
@@ -25,7 +25,7 @@
         </fieldset>
         <fieldset>
             <label for="q3">Which Element has the Least playable units</label>
-            <select title="Question 3">
+            <select title="Question 3" name="q3" id="q3">
                 <option selected disabled>Choose One...</option>
                 <option>Dendro</option>
                 <option>Geo</option>
