--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,12 +29,10 @@
         <section class="location">
             <div>
                 <h2>Location</h2>
-                <h4>Index, Washington</h4>
-                <ul>
-                    <li>Address: 12345 6th Street, 78909</li>
-                    <li>Email: Email@address.com</li>
-                    <li>Phone: (123) 456-7890</li>
-                </ul>
+                <h3>Index, Washington</h3>
+                <p><span>Address:</span> 12345 6th Street, 78909</p>
+                <p><span>Email:</span> Email@address.com</p>
+                <p><span>Phone:</span> (123) 456-7890</p>
             </div>
             <iframe width='100%' height='400px'
                 src="https://api.mapbox.com/styles/v1/rakoryn/cjqw916re47sn2rpc7uxa8oh8.html?title=false&access_token=pk.eyJ1IjoicmFrb3J5biIsImEiOiJjanF3OHNjMHYxM2duNDJtam9rOXE3N3drIn0.unLX9jTkX1xnKZtIKGPUWA&zoomwheel=false#13.57/47.81487/-121.55947"
