Added wireframe to footer

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -103,6 +103,7 @@
         </section>
     </main>
     <footer>
+        <a href="images/Contact-page-wireframe.png">Page Wireframe</a>
         <p>&copy;2023 Mt. Rafting Co. | Jacob Perry</p>
         <a href="https://www.facebook.com/"><img src="./images/facebook.svg" alt="Facebook link icon"></a>
         <a href="https://www.instagram.com/"><img src="./images/instagram.svg" alt="Instagram link icon"></a>
