Added Trips page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,12 +24,15 @@
     <main>
         <div class="hero">
             <img src="images/rafting11_1024.jpg" alt="Hero Image">
-            <h1>Mt. Rafting Co.</h1>
             <article>
-                <img src="./images/rafting21_600.png" alt="Happy customer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut odit placeat, eveniet commodi officia
-                    cumque ea sapiente deleniti necessitatibus, quos, veritatis optio id nihil rerum aperiam molestiae!
-                    Nemo, amet ipsum!</p>
+                <h1>Mt. Rafting Co.</h1>
+                <div class="content">
+                    <img src="./images/rafting21_600.png" alt="Happy customer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut odit placeat, eveniet commodi officia
+                        cumque ea sapiente deleniti necessitatibus, quos, veritatis optio id nihil rerum aperiam
+                        molestiae!
+                        Nemo, amet ipsum!</p>
+                </div>
             </article>
         </div>
         <section class="history">
