--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -41,17 +41,23 @@
             <div class="trip">
                 <article>
                     <img src="images/rafting65_600.jpg" alt="" width="500px">
-                    <p>2 Hour Session</p>
+                    <div class="trip-text">
+                        <h3>2 Hour Session</h3>
+                    </div>
                     <button>Book Now!</button>
                 </article>
                 <article>
                     <img src="images/rafting58_600.jpg" alt="" width="500px">
-                    <p>Half Day Session</p>
+                    <div class="trip-text">
+                        <h3>Half Day Session</h3>
+                    </div>
                     <button>Book Now!</button>
                 </article>
                 <article>
                     <img src="images/rafting20_600.jpg" alt="" width="500px">
-                    <p>Full Day Session</p>
+                    <div class="trip-text">
+                        <h3>Full Day Session</h3>
+                    </div>
                     <button>Book Now!</button>
                 </article>
             </div>
@@ -63,12 +69,16 @@
             <div class="trip">
                 <article>
                     <img src="images/rafting58_600.jpg" alt="" width="500px">
-                    <p>Half Day Session</p>
+                    <div class="trip-text">
+                        <h3>Half Day Session</h3>
+                    </div>
                     <button>Book Now!</button>
                 </article>
                 <article>
                     <img src="images/rafting20_600.jpg" alt="" width="500px">
-                    <p>Full Day Session</p>
+                    <div class="trip-text">
+                        <h3>Full Day Session</h3>
+                    </div>
                     <button>Book Now!</button>
                 </article>
             </div>
