--- a/wwr/index.html
+++ b/wwr/index.html
@@ -59,8 +59,11 @@
             <aside>
                 <h2>Newsletter</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, distinctio optio ex incidunt suscipit ipsa rem impedit, laboriosam tempora quasi nam nostrum sint natus blanditiis at deleniti. Odio, natus expedita?</p>
-                <input type="text">
-                <button>Join Newsletter</button>
+                <form>
+                    <label for="newsletter-email">Email:</label>
+                    <input type="email" name="newsletter-email" id="newsletter-email">
+                    <button>Join Newsletter</button>
+                </form>
             </aside>
             <section class="raft-with-us">
                 <h2>Why raft with us?</h2>
