--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,7 +39,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum odit tempore aliquam cumque fugiat aspernatur enim facere quisquam a eveniet perspiciatis, rerum autem, maiores dolores voluptatem qui est reprehenderit saepe?</p>
                 <div class="trip">
                     <article>
-                        <img src="images/rafting43_600.jpg" alt="" width="400">
+                        <img src="images/rafting43_600.jpg" alt="rafters in the middle ofa river with trees on both sides" width="400">
                         <div class="trip-text">
                             <h3>Location A</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa sed laudantium quod deleniti nihil natus quam. Iste mollitia dolor explicabo accusantium molestias tempore exercitationem, consectetur facilis! Consequuntur, ut ea.</p>
@@ -47,7 +47,7 @@
                         <button>Book Now</button>
                     </article>
                     <article>
-                        <img src="images/rafting65_600.jpg" alt="" width="400">
+                        <img src="images/rafting65_600.jpg" alt="rafters on rapids between a boulder and bedrock edge" width="400">
                         <div class="trip-text">
                             <h3>Location B</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea debitis, culpa assumenda sunt error, iure tenetur vel adipisci quibusdam beatae laboriosam ducimus nostrum ut voluptates, consequuntur quae hic doloribus atque?</p>
@@ -67,14 +67,14 @@
             </aside>
             <section class="raft-with-us">
                 <h2>Why raft with us?</h2>
-                <img src="images/rafting20_600.jpg" alt="">
-                <p>Fun For All</p>
-                <img src="images/rafting58_600.jpg" alt="">
-                <p>"A thrill the whole way though"</p>
-                <p>A first step to loving the rapids</p>
-                <img src="images/rafting22_600.jpg" alt="">
-                <p>Memories to charish for a lifetime</p>
-                <img src="images/rafting14_600.jpg" alt="">
+                <img src="images/rafting20_600.jpg" alt="Rafter's paddles above water">
+                <h4>Fun For All</h4>
+                <img src="images/rafting58_600.jpg" alt="above view of river">
+                <h4>"A thrill the whole way though"</h4>
+                <h4>A first step to loving the rapids</h4>
+                <img src="images/rafting22_600.jpg" alt="helmets and other equipment laid on raft">
+                <h4>Memories to charish for a lifetime</h4>
+                <img src="images/rafting14_600.jpg" alt="rafters cheering with paddles in the air">
             </section>
         </div>
     </main>
